fixed spacing of popup stats

--- a/src/Components/Collections/Collections.css
+++ b/src/Components/Collections/Collections.css
@@ -22,6 +22,7 @@
 
 .collectionsPopUp {
     font-weight: 700;
+    line-height: 20%;
     position: absolute;
     text-align: center;
     border-radius: 5px;
@@ -46,8 +47,8 @@
     font-size: large;
     font-weight: 600;
     position: absolute;
-    bottom: 70px;
-    left: 15px;
+    bottom: 50px;
+    left: 9px;
     opacity: 0;
 }
 
